<resources>
    <string name="app_name">Attendence Management System</string>

    <string name="app_heading">Attendance Management System</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="student_login">Student Login</string>
    <string name="enter_your_emailId">Enter your EmailId</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="donot_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup">Signup</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="teacher_signup">Teacher Signup</string>
    <string name="login_now">Login Now</string>
    <string name="view_attendence">View Attendence</string>
    <string name="add_syllabus">Add Syllabus</string>\
    <string name="view_syllabus">View Syllabus</string>
    <string name="list_of_students">List of students</string>
    <string name="mark_attendence">Mark attendence</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="under_development">Under development</string>
    <string name="view_profile">View profile</string>
    <string name="roll_number">Roll number</string>
    <string name="type">type</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="please_enter_your_emailid">Please enter your EmailId</string>
    <string name="please_enter_your_number">Please enter your number</string>
    <string name="please_enter_your_password">Please enter your password.</string>
    <string name="password_and_confirm_password_are_not_matched">Password and confirm password are not matched</string>
    <string name="invalid_login">Invalid EmailId or Password.</string>
    <string name="uplaod_a_syllabus">Upload Syllabus</string>
    <string name="upload">Choose File to Upload</string>
    <string name="syllabus_uploaded_successfully">Syllabus uploaded successfully.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="first_year">1st</string>
    <string name="second_year">2nd</string>
    <string name="third_year">3rd</string>
    <string name="fourth_year">4th</string>
    <string name="no_data_found">No Data Found</string>
    <string name="profile">Profile</string>
    <string name="view_subject">View subject</string>
    <string name="select_year">Select year</string>

    <string name="first_y">1stYear</string>
    <string name="second_y">2ndYear</string>
    <string name="third_y">3rdYear</string>
    <string name="fourth_y">4thYear</string>
    <string name="please_select_year">Please select year</string>


    <string-array name="total_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


</resources>
