<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_attendence"
            android:icon="@drawable/icon_view_attendence"
            android:title="@string/view_attendence" />
        <item
            android:id="@+id/nav_add_syllabus"
            android:icon="@drawable/icon_mark_attendence"
            android:title="@string/add_syllabus" />
        <item
            android:id="@+id/nav_mark_attendence"
            android:icon="@drawable/icon_mark_attendence"
            android:title="@string/mark_attendence" />
     <!--   <item
            android:id="@+id/nav_logout_teacher"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout" />-->
    </group>
</menu>