<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/teacher_signup"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/dimen_20"
                android:src="@drawable/logo" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_15"
                    android:hint="@string/enter_your_name"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_15"
                    android:hint="@string/enter_your_emailId"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5">

                <EditText
                    android:id="@+id/edt_numbet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_15"
                    android:hint="@string/enter_your_number"
                    android:imeOptions="actionNext"
                    android:inputType="number|phone"
                    android:padding="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_15"
                    android:hint="@string/enter_your_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_15"
                    android:hint="@string/enter_your_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:textSize="18sp"
                android:text="@string/select_year"
                android:padding="@dimen/dimen_10"
                />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16">

                <RadioButton
                    android:id="@+id/radioFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_y"
                    android:padding="@dimen/dimen_16"

                    />

                <RadioButton
                    android:id="@+id/radioSecond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_y"
                    android:padding="@dimen/dimen_16"
                    />

                <RadioButton
                    android:id="@+id/radioThird"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third_y"
                    android:padding="@dimen/dimen_16"
                    />

                <RadioButton
                    android:id="@+id/radioFourth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_y"
                    android:padding="@dimen/dimen_16"/>
            </RadioGroup>


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginRight="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_5"
                android:background="@drawable/common_rounded_button"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/txt_already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="@string/already_have_account"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>