<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_10">

        <TextView
            android:id="@+id/txt_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5"
            android:fontFamily="serif"
            android:text="@string/name"
            android:textSize="16sp" />

      <!--  <Button
            android:id="@+id/btn_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_5"
            android:background="@android:color/transparent"
            android:text="@string/present"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_green_light"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btn_present"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_5"
            android:background="@android:color/transparent"
            android:text="@string/absent"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:visibility="gone" />-->

        <TextView
            android:id="@+id/txt_student_roll_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_student_name"
            android:layout_margin="@dimen/dimen_5"
            android:fontFamily="serif"
            android:text="@string/roll_number"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_attendence_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5"

            android:fontFamily="serif"
            android:text="@string/type"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_student_roll_number"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_5"
            android:background="@android:color/transparent"
            android:text="@string/present"
            android:textAllCaps="false"
            android:textColor="#ff99cc00"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_present"
            android:layout_alignBottom="@+id/btn_present"
            android:layout_toEndOf="@+id/txt_student_roll_number"
            android:layout_toRightOf="@+id/txt_student_roll_number"
            android:text="@string/absent"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textColor="#ffcc0000"
            android:textStyle="bold"
            android:visibility="visible" />

    </RelativeLayout>
</RelativeLayout>