<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/mCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp_4">

        <LinearLayout
            android:id="@+id/llayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:weightSum="4">

            <TextView
                android:id="@+id/tvFirst"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_for_pending_job_bookings_tabs"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:singleLine="true"
                android:text="@string/first_year"
                android:textColor="@color/selector_text_color_jobs_bookings_tabs_text"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:id="@+id/tvSecond"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_for_upcoming_job_bookings_tabs"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:singleLine="true"
                android:text="@string/second_year"
                android:textColor="@color/selector_text_color_jobs_bookings_tabs_text"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:id="@+id/tvThird"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_for_upcoming_job_bookings_tabs"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:singleLine="true"
                android:text="@string/third_year"
                android:textColor="@color/selector_text_color_jobs_bookings_tabs_text"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:id="@+id/tvFourth"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_for_completed_job_bookings_tabs"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:singleLine="true"
                android:text="@string/fourth_year"
                android:textColor="@color/selector_text_color_jobs_bookings_tabs_text"
                android:textSize="@dimen/sp_16"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/mRecyclerViewAddSubject"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mCardLayout"
        android:layout_margin="@dimen/dimen_16"
        />


</RelativeLayout>